Fix the layout problem and no styling

--- a/core/layouts/component/style.css
+++ b/core/layouts/component/style.css
@@ -52,7 +52,7 @@
     gap: 40px;
     align-items: flex-start;
 
-    main {
+    .content {
       padding-block-start: 40px;
       margin-block-start: 40px;
       border-top: 1px solid var(--border-color);
